--- a/app.css
+++ b/app.css
@@ -15,8 +15,8 @@
   :root {
       --color-lightest: #ffcdcd;
       --color-light: #ee6c6c;
-      --color: #EC6565;
-      --color-dark: #ca4e4e;
+      --color: #f38ea4;
+      --color-dark: #d6b6ff;
       --font: "Open Sans", Helvetica, sans-serif;
   }
 
