--- a/app.css
+++ b/app.css
@@ -14,7 +14,7 @@
   ---------------------------------------------------------------------- */
   :root {
       --color-lightest: #ffcdcd;
-      --color-light: #ee6c6c;
+      --color-light: #ee8181;
       --color: #f38ea4;
       --color-dark: #d6b6ff;
       --font: "Open Sans", Helvetica, sans-serif;
